--- a/index.html
+++ b/index.html
@@ -43,22 +43,24 @@
       </div>
     </div>
     <div class='container work' id='work' style='width: 80%'>
-      <h1>Current Work</h1>
-      <h4></h4>
-      <h3>ReadyApps Development</h3>
-      <h4>www.readyappsdev.com</h4>
-      <h4>CoFounder/Lead Architect</h4>
-      <p>A small custom software group focused on developing web applications for all platforms for both enterprise and consumer markets.</p>
-      <br/>
-      <h3>Habit.ly</h3>
-      <h4>www.habit.ly</h4>
-      <h4>Founder</h4>
-      <p>Habit.ly is a small side project of mine that arose out of a want and need for a way to track my everyday habits and actions. I wanted an application to easily track things and also present the data in a visually pleasing manner which may lead to helping me improve on these habits whether they be good or bad. </p>
-      <br/>
-      <h3>Arkad</h3>
-      <h4>www.arkadit.com</h4>
-      <h4>Developer</h4>
-      <br/>
+      <div class='row'>
+        <div class='span5'>
+          <img src='img/readyapps_logo.png'>
+          <br/><br/>
+          <a href='http://www.readyappsdev.com'>www.readyappsdev.com</a>
+          <h4>Co-Founder/Lead Developer</h4>
+          <p>A consulting and development shop focused on building web apps for both enterprise and consumer markets.</p>
+          <br/>
+        </div>
+        <div class='span5'>
+          <img src='img/arkad_logo.png' style='margin-bottom:13px;'>
+          <br/><br/>
+          <a href='http://www.arkadit.com'>www.arkadit.com</a>
+          <h4>Co-Founder/Lead Developer</h4>
+          <p>A platform for securely managing and sharing financial data and metrics with investors and lenders.</p>
+          <br/>
+        </div>
+      </div>
     </div>
     <div class='container resume' id='resume' style='width: 80%'>
       <div class='row'>
@@ -67,7 +69,7 @@
         </div>
       </div>
       <div class='row'>
-        <div class='span4'>
+        <div class='span5'>
           <h3>Languages</h3>
           <p>Ruby • C/C++/C# • Java/Groovy • JavaScript • ASP /PHP • UML </p>
           <h3>Databases</h3>
@@ -75,7 +77,7 @@
           <h3>Methodologies</h3>
           <p>CS Design Patterns • OOP • Six Sigma • Lean Manufacturing • CMMI • ITIL</p>
         </div>
-        <div class='span4'>
+        <div class='span5'>
           <h3>Frameworks/Libraries</h3>
           <p>Rails • Grails • Backbone.js • Underscore.js • jQuery.js</p>
           <h3>Software Proficiencies</h3>
@@ -83,7 +85,7 @@
         </div>
       </div>
       <div class='row'>
-        <div class='span4'>
+        <div class='span5'>
           <h2>Education</h2>
           <p>The University of Arizona - May 2011</p>
           <p>Bachelor of Science in Engineering Management</p>
